--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <path d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"/>
                     </svg>
                 </div>
-                <p class="subtitle">今日はどの音階を練習しようかな♪</p>
+                <p class="subtitle">今日の音階は何かな？</p>
             </div>
 
             <!-- スロットマシン -->
@@ -52,7 +52,6 @@
                 <p class="result-label">今日の音階は</p>
                 <p class="result-scale-german" id="resultGerman"></p>
                 <p class="result-scale-japanese" id="resultJapanese"></p>
-                <p class="result-message">がんばって練習しよう</p>
             </div>
 
             <!-- 練習履歴ボタン -->
