--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">B dur</div>
-                            <div class="scale-reading">ãƒ™ãƒ¼ãƒ»ãƒ‰ã‚¥ã‚¢</div>
-                            <div class="scale-japanese">å¤‰ãƒ­é•·èª¿</div>
+                            <div class="scale-reading">ベー・ドゥア</div>
+                            <div class="scale-japanese">変ロ長調</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">F dur</div>
