--- a/index.html
+++ b/index.html
@@ -92,61 +92,73 @@
                             <div class="scale-german">C dur</div>
                             <div class="scale-reading">ツェー・ドゥア</div>
                             <div class="scale-japanese">ハ長調</div>
+                            <div class="scale-key-signature">調号なし</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">G dur</div>
                             <div class="scale-reading">ゲー・ドゥア</div>
                             <div class="scale-japanese">ト長調</div>
+                            <div class="scale-key-signature">♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">D dur</div>
                             <div class="scale-reading">デー・ドゥア</div>
                             <div class="scale-japanese">ニ長調</div>
+                            <div class="scale-key-signature">♯♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">A dur</div>
                             <div class="scale-reading">アー・ドゥア</div>
                             <div class="scale-japanese">イ長調</div>
+                            <div class="scale-key-signature">♯♯♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">E dur</div>
                             <div class="scale-reading">エー・ドゥア</div>
                             <div class="scale-japanese">ホ長調</div>
+                            <div class="scale-key-signature">♯♯♯♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">B dur</div>
                             <div class="scale-reading">ベー・ドゥア</div>
                             <div class="scale-japanese">ロ長調</div>
+                            <div class="scale-key-signature">♯♯♯♯♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">F# dur</div>
                             <div class="scale-reading">フィス・ドゥア</div>
                             <div class="scale-japanese">嬰ヘ長調</div>
+                            <div class="scale-key-signature">♯♯♯♯♯♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">Des dur</div>
                             <div class="scale-reading">デス・ドゥア</div>
                             <div class="scale-japanese">変ニ長調</div>
+                            <div class="scale-key-signature">♭♭♭♭♭</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">As dur</div>
                             <div class="scale-reading">アス・ドゥア</div>
                             <div class="scale-japanese">変イ長調</div>
+                            <div class="scale-key-signature">♭♭♭♭</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">Es dur</div>
                             <div class="scale-reading">エス・ドゥア</div>
                             <div class="scale-japanese">変ホ長調</div>
+                            <div class="scale-key-signature">♭♭♭</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">B dur</div>
                             <div class="scale-reading">ベー・ドゥア</div>
                             <div class="scale-japanese">変ロ長調</div>
+                            <div class="scale-key-signature">♭♭</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">F dur</div>
                             <div class="scale-reading">エフ・ドゥア</div>
                             <div class="scale-japanese">ヘ長調</div>
+                            <div class="scale-key-signature">♭</div>
                         </div>
                     </div>
                 </div>
@@ -158,61 +170,73 @@
                             <div class="scale-german">a moll</div>
                             <div class="scale-reading">アー・モル</div>
                             <div class="scale-japanese">イ短調</div>
+                            <div class="scale-key-signature">調号なし</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">e moll</div>
                             <div class="scale-reading">エー・モル</div>
                             <div class="scale-japanese">ホ短調</div>
+                            <div class="scale-key-signature">♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">h moll</div>
                             <div class="scale-reading">ハー・モル</div>
                             <div class="scale-japanese">ロ短調</div>
+                            <div class="scale-key-signature">♯♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">fis moll</div>
                             <div class="scale-reading">フィス・モル</div>
                             <div class="scale-japanese">嬰ヘ短調</div>
+                            <div class="scale-key-signature">♯♯♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">cis moll</div>
                             <div class="scale-reading">ツィス・モル</div>
                             <div class="scale-japanese">嬰ハ短調</div>
+                            <div class="scale-key-signature">♯♯♯♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">gis moll</div>
                             <div class="scale-reading">ギス・モル</div>
                             <div class="scale-japanese">嬰ト短調</div>
+                            <div class="scale-key-signature">♯♯♯♯♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">dis moll</div>
                             <div class="scale-reading">ディス・モル</div>
                             <div class="scale-japanese">嬰ニ短調</div>
+                            <div class="scale-key-signature">♯♯♯♯♯♯</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">b moll</div>
                             <div class="scale-reading">ベー・モル</div>
                             <div class="scale-japanese">変ロ短調</div>
+                            <div class="scale-key-signature">♭♭</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">f moll</div>
                             <div class="scale-reading">エフ・モル</div>
                             <div class="scale-japanese">ヘ短調</div>
+                            <div class="scale-key-signature">♭♭♭♭</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">c moll</div>
                             <div class="scale-reading">ツェー・モル</div>
                             <div class="scale-japanese">ハ短調</div>
+                            <div class="scale-key-signature">♭♭♭</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">g moll</div>
                             <div class="scale-reading">ゲー・モル</div>
                             <div class="scale-japanese">ト短調</div>
+                            <div class="scale-key-signature">♭♭</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">d moll</div>
                             <div class="scale-reading">デー・モル</div>
                             <div class="scale-japanese">ニ短調</div>
+                            <div class="scale-key-signature">♭</div>
                         </div>
                     </div>
                 </div>
