--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             <div class="scale-german">b moll</div>
                             <div class="scale-reading">ベー・モル</div>
                             <div class="scale-japanese">変ロ短調</div>
-                            <div class="scale-key-signature">♭♭</div>
+                            <div class="scale-key-signature">♭♭♭♭♭</div>
                         </div>
                         <div class="scale-card">
                             <div class="scale-german">f moll</div>
