--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 
                 <div class="table-section">
                     <div class="table-section-header">
-                        <h4 class="table-section-title">長調 (dur / ドゥア)</h4>
-                        <h4 class="table-section-title">短調 (moll / モル)</h4>
+                        <h4 class="table-section-title">dur</h4>
+                        <h4 class="table-section-title">moll</h4>
                     </div>
                     <div class="scale-grid">
                         <!-- 調号なし -->
