--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!-- iOS用メタタグ -->
     <meta name="theme-color" content="#fce7f3">
     
-    <!-- Tone.js CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
+    <!-- SoundFont.js CDN -->
+    <script src="https://unpkg.com/soundfont-player@0.12.0/dist/soundfont-player.min.js"></script>
     
     <link rel="stylesheet" href="style.css">
 </head>
