--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <path d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"/>
                     </svg>
                 </div>
-                <p class="subtitle">今日の音階は何かな？</p>
+                <p class="subtitle">今日の音階は何かな?</p>
             </div>
 
             <!-- スロットマシン -->
@@ -169,9 +169,9 @@
                         </div>
                         
                         <!-- ♯5個 -->
-                        <div class="scale-card" data-scale="B dur">
-                            <div class="scale-german">B dur</div>
-                            <div class="scale-reading">ベー・ドゥア</div>
+                        <div class="scale-card" data-scale="H dur">
+                            <div class="scale-german">H dur</div>
+                            <div class="scale-reading">ハー・ドゥア</div>
                             <div class="scale-japanese">ロ長調</div>
                             <div class="scale-key-signature">♯♯♯♯♯</div>
                         </div>
